Fri, 07 Jul 2006 14:21:59 +0200 <thp@perli.net>
	* Added workarounds to libopmlreader to support 
	  subscription lists from odeo.com (Import from web)
	* Unquote URL-encoded text from odeo.com opml feeds

Thu, 06 Jul 2006 20:55:37 +0200 <thp@perli.net>
	* Multiple selection support for download progress list
	* Pushed version number and release date

Thu, 22 Jun 2006 23:37:50 +0200 <thp@perli.net>
	* Added support for multiple-selection in available podcasts 
	  tab and starting simultaneous downloads at once
	* Updated TODO list

Tue, 13 Jun 2006 22:38:17 +0200 <thp@perli.net>
	* Added libopmlreader, first cut of OPML input support -- you 
	  can now select from a list of channels and add them to your 
	  local channel list
	* Added config option "opml_url" to specify URL which will  
	  be used as source for the OPML input support feature

Tue, 13 Jun 2006 20:20:07 +0200 <thp@perli.net>
	* Removed ipod-dbus support (has now its extra branch in svn)
	* Bumped version date + release date
	* You can run gPodder on python2.3 again (instead of 2.4 only)
	* libplayers now handles .desktop command lines according to 
	  the freedesktop.org spec (%F, %f, %U and %u supported)

Fri, 09 Jun 2006 12:37:54 +0200 <thp@perli.net>
	* Applied a modified version of Camille's patch to get videos 
	  (mov, mp4, m4v) working with iPod video devices on sync -
	  can anyone w/ a video iPod test this if it's working?

Thu, 08 Jun 2006 23:58:49 +0200 <thp@perli.net>
	* Fixed a bug where a "&" character in the channels list would 
	  result in gPodder to crash - thanks to Gaim Roitgrund for 
	  pointint out that error and providing a nice bug report!
	* Pushed version and release date

Mon, 05 Jun 2006 15:55:01 +0200 <thp@perli.net>
	* Packages you will need for debian compile (in README)

Sun, 28 May 2006 16:13:38 +0200 <thp@perli.net>
	* Added "only download new podcasts" to TODO list

Mon, 01 May 2006 21:28:24 +0200 <thp@perli.net>