@@ -1,3 +1,6 @@
+Fri, 14 Jul 2006 21:07:56 +0200 <thp@perli.net>
+	* Multiple selection support for downladed items list
+
 Fri, 07 Jul 2006 14:21:59 +0200 <thp@perli.net>
 	* Added workarounds to libopmlreader to support 
 	  subscription lists from odeo.com (Import from web)
